<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Football Scores</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="test_text" translatable="false">Test</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="champions_league" translatable="false">UEFA Champions League</string>
    <string name="bundesliga" translatable="false">Bundesliga</string>
    <string name="premierleague" translatable="false">Premier League</string>
    <string name="primeradivison" translatable="false">Primera Division</string>
    <string name="seriaa" translatable="false">Serie A</string>
    <string name="matchday_text">Match day</string>
    <string name="group_stage_text">Group stages</string>
    <string name="first_knockout_round">First knockout round</string>
    <string name="quarter_final">Quarter Final</string>
    <string name="semi_final">Semi Final</string>
    <string name="final_text">Final</string>
    <string name="share_text">Share</string>
    <string name="about">About</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="about_text">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version is given to students in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.

        During the off season, fake data will be added to the app.
    </string>
    <string name="widget_text">This is a widget probably.</string>
    <string name="api_key" translatable="false">77a0cbdc631e42f6ba2a18acb3ee7df8</string>
    <string name="dummy_data">{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>
    <string name="menu_main_desc">Menu on main screen</string>
    <string name="menu_about_desc">Menu on About screen</string>
    <string name="pager_fragment_desc">Pager Fragment</string>
    <string name="pager_fragment_pager_desc">Pager Fragment Pager</string>
    <string name="pager_fragment_pager_strip_desc">Pager Fragment Pager Tab</string>
    <string name="fragment_main_text">Main Page Fragment</string>
    <string name="fragment_main_list_desc">Main Page Fragment list</string>
    <string name="empty_text_view_desc">No data available Empty View</string>
    <string name="empty_text_view">No game data available for today</string>
    <string name="fragment_about_desc">About Fragment</string>
    <string name="fragment_about_text">About Fragment Text</string>
    <string name="detail_fragment_desc">Detail Fragment</string>
    <string name="detail_fragment_league_desc">Detail Fragment League details</string>
    <string name="detail_fragment_league_text">League Details Text</string>
    <string name="detail_fragment_match_text">Match Details Text</string>
    <string name="detail_fragment_share_desc">Detail Fragment Share Layout</string>
    <string name="detail_fragment_share_btn_desc">Detail Fragment Share button</string>
    <string name="activity_main_desc">Main Activity Layout</string>
    <string name="activity_about_desc">About Activity Desc</string>
    <string name="football_widget_desc">Football Widget Layout</string>
    <string name="football_widget_team_desc">Football widget Team info layout</string>
    <string name="football_widget_home_team_text">Home team info</string>
    <string name="football_widget_away_team_text">Away team info</string>
    <string name="football_widget_score_text">Score Info</string>
    <string name="widget_collection_item_desc">Collection Widget</string>
    <string name="widget_collection_item_title">Detailed Scores Widget</string>
    <string name="widget_collection_item_crests">Detailed Score Crests</string>
    <string name="widget_collection_item_home">Home Crest</string>
    <string name="widget_collection_item_away">Away Crest</string>
    <string name="widget_collection_item_teams">Detailed Score Team Details</string>
    <string name="widget_collection_item_home_team">Home Team Desc</string>
    <string name="widget_collection_item_away_team">Away team desc</string>
    <string name="widget_collection_item_scores">Detailed Scores</string>
    <string name="widget_collection_item_home_score">Home Team score</string>
    <string name="widget_collection_item_away_score">Away Team Score</string>
    <string name="widget_collection_desc">Collection Detailed Widget</string>
    <string name="widget_collection_title_desc">Detailed Scores</string>
    <string name="football_coll_widget_title">Football Scores Widget</string>
</resources>
