<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/detail_fragment_desc">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/detail_fragment_league_desc">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/League"
            android:id="@+id/league_textview"
            android:contentDescription="@string/detail_fragment_league_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/test_text"
            android:textSize="@dimen/League"
            android:textColor="@android:color/black"
            android:id="@+id/matchday_textview"
            android:contentDescription="@string/detail_fragment_match_text"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/detail_fragment_share_desc">
            <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/share_text"
            android:id="@+id/share_button"
            android:drawableLeft="@android:drawable/ic_menu_share"
            android:paddingLeft="120dp"
            android:paddingRight="120dp"
            android:contentDescription="@string/detail_fragment_share_btn_desc"/>
    </FrameLayout>

</LinearLayout>