<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/widget_collection_item_desc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:contentDescription="@string/widget_collection_item_title">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:contentDescription="@string/widget_collection_item_crests">

            <ImageView
                android:id="@+id/home_crest"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/widget_collection_item_home"
                android:gravity="center"
                android:src="@drawable/ic_launcher"/>

            <ImageView
                android:id="@+id/away_crest"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/widget_collection_item_away"
                android:gravity="center"
                android:src="@drawable/ic_launcher"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical"
            android:contentDescription="@string/widget_collection_item_teams">

            <TextView
                android:id="@+id/home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/widget_collection_item_home_team"
                android:gravity="center"
                android:text="@string/test_text"
                android:textColor="@color/blue01"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/away_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/widget_collection_item_away_team"
                android:gravity="center"
                android:text="@string/test_text"
                android:textColor="@color/blue01"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:contentDescription="@string/widget_collection_item_scores">

            <TextView
                android:id="@+id/home_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/widget_collection_item_home_score"
                android:gravity="center"
                android:text="@string/test_text"
                android:textColor="@color/blue01"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/away_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/widget_collection_item_away_score"
                android:gravity="center"
                android:text="@string/test_text"
                android:textColor="@color/blue01"
                android:textSize="10dp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>