<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/list_horizonal_matgin"
    android:layout_marginRight="@dimen/list_horizonal_matgin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:contentDescription="@string/fragment_main_text">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id = "@+id/scores_list"
            android:divider="@android:color/transparent"
            android:dividerHeight="15sp"
            android:contentDescription="@string/fragment_main_list_desc"/>

    <TextView
        android:id="@+id/empty_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/empty_text_view"
        android:textAppearance="?android:textAppearanceLarge"
        android:contentDescription="@string/empty_text_view_desc"/>
</FrameLayout>
